examples/pass/recursion/factorial.dew
// expect: 120
// Tier: Small
def rec fact = fn(n: Int) -> Int { if n == 0 { 1 } else { n * fact(n - 1) } };
def main = fn { fact(5) -> stdout; };
