examples/fail/not_a_function.dew
def main = fn -> Int { 42(0) }
